[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/obstacles/emitter.png" type="Texture" id=1]
[ext_resource path="res://obstacles/Laser.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -150, 0 )
b = Vector2( 150, 0 )

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[node name="Laser" type="Node2D"]
position = Vector2( 268.709, 145.352 )
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( -150, 0, 150, 0 )
width = 1.0
default_color = Color( 1, 0.0235294, 0, 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="hurtbox1" type="Area2D" parent="."]
position = Vector2( -150, 0 )
scale = Vector2( 5, 3 )
collision_layer = 64
collision_mask = 0

[node name="emitter" type="Sprite" parent="hurtbox1"]
position = Vector2( -6, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="hurtbox1"]
position = Vector2( -7, 0 )
shape = SubResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="hurtbox1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox1/KinematicBody2D"]
position = Vector2( -10, 0 )
shape = SubResource( 3 )

[node name="hurtbox2" type="Area2D" parent="."]
position = Vector2( 150, 0 )
scale = Vector2( 5, 3 )
collision_layer = 64
collision_mask = 0

[node name="emitter" type="Sprite" parent="hurtbox2"]
position = Vector2( 6, 0 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox2"]
position = Vector2( 7, 0 )
shape = SubResource( 2 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="hurtbox2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox2/KinematicBody2D2"]
position = Vector2( 10, 0 )
shape = SubResource( 3 )
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="area_entered" from="hurtbox1" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="hurtbox2" to="." method="_on_hurtbox_area_entered"]
